--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,8 @@ body {
     color: #39a6b2;
 }
 
+/* HEADER/NAV STYLES */
+
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
@@ -20,8 +22,7 @@ header h1 {
     font-weight: bold;
     font-size: 36px;
     color:  #fce138;
-    margin: 0;
-    
+    margin: 0; 
 }
 
 header a {
@@ -35,11 +36,10 @@ header nav {
 
 header nav ul {
     display: flex;
-    flex-grow: wrap;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     list-style: none;
-}
 }
 
 header nav ul li a {
@@ -47,21 +47,25 @@ header nav ul li a {
     font-weight: lighter;
     font-size: 1.55vw;}
 
+
+/* FOOTER STYLES */
+
 footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 
 footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -76,27 +80,46 @@ footer a {
     box-sizing: border-box;
 }
 
+/* ALL SELECTION STYLES */
+
 section {
     padding: 60px;
 }
-/* Hero Style Start */
+
+/* HERO STYLES */
+
 .hero {
     background-image: url("../images/hero-bg.jpg");
     height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
 }
 
 .hero-form {
     border: 3px solid #024e76;
     background-color: #fce138;
     padding: 20px;
-    width: 500px;
     color: #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
+    width: 40% ;
+    margin: 3.5%;
 }
 
 .hero-form h3 {
@@ -129,7 +152,8 @@ section {
     padding: 10px 20px;
     font-size: 16px;
   }
-  /* HERO STYLES END */
+  
+
 
 .intro {
     text-align: center;
