--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -74,12 +75,6 @@ footer a {
     color: #024e76;
 }
 
-* {
-    margin: 0;
-    padding:0;
-    box-sizing: border-box;
-}
-
 /* ALL SELECTION STYLES */
 
 section {
@@ -152,12 +147,24 @@ section {
     padding: 10px 20px;
     font-size: 16px;
   }
-  
 
+/* SELECTION TITLE STYLES */
 
-.intro {
-    text-align: center;
+.section-title {
+    font-size: 55px;
+    color: #024e76;
+    border-bottom: 3px solid;
 }
+
+.primary-border {
+    border-color: #fce138;
+}
+
+.secondary-border {
+    border-color: #39a6b2;
+}
+
+/* WHAT WE DO SECTION STYLES */
 
 .intro p {
     line-height: 1.7;
@@ -167,8 +174,9 @@ section {
     margin: 0 auto;
 }
 
+/* WHAT YOU DO SECTION STYLES */
+
 .steps {
-    text-align: center;
     background: #fce138
 }
 
@@ -196,26 +204,7 @@ section {
     font-size: 38px;
 }
 
-.section-title {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
-    border-bottom: 3px solid;
-}
-
-.primary-border {
-    border-color: #fce138;
-}
-
-.secondary-border {
-    border-color: #39a6b2;
-}
-
-.trainers {
-    text-align: center;
-}
+/* MEET THE TRAINERS */
 
 .trainer {
     width: 900px;
@@ -236,14 +225,6 @@ section {
     width: 65%;
 }
 
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
 .trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
@@ -260,8 +241,9 @@ section {
     line-height: 1.3;
 }
 
+/* REACH OUT STYLES */
+
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
@@ -297,4 +279,14 @@ section {
 
 .contact-info a {
     color: #fce138;
+}
+
+/* UTILITIES */
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
 }
