--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,10 @@ section {
     font-size: 55px;
     color: #024e76;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -172,6 +176,7 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 /* WHAT YOU DO SECTION STYLES */
@@ -180,28 +185,53 @@ section {
     background: #fce138
 }
 
-.steps div {
-    margin-bottom: 80px;
-}
-
-.steps img {
-    width: 15%;
-    margin: 10px 0;
-}
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+  }
 
 .steps h3 {
     color: #024e76;
     font-size: 46px;
     margin-top: 10px;
+    flex: 1 30%;
 }
 
-.steps p {
+.step-info {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+
+.step-img img {
+    max-width: 100%;
+}
+
+.step-text {
+    flex: 12;
+}
+
+.step-text p {
     color: #39a6b2;
-    margin-top: 10px;
+    font-size: 18px;
 }
 
-.steps span {
-    font-size: 38px;
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
 }
 
 /* MEET THE TRAINERS */
@@ -289,4 +319,8 @@ section {
 
 .text-right {
     text-align: right;
+}
+
+.flex-row {
+    display: flex;
 }
