--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2; 
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -6,19 +12,19 @@
 
 body {
     font-family: Helvetica, Arial, sans-serif;
-    color: #39a6b2;
+    color: var(--tertiary-color);
 }
 
 /* HEADER/NAV STYLES */
 
 header {
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    position: -webkit-sticky;
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
@@ -31,13 +37,13 @@ header {
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color:  #fce138;
+    color:  var(--primary-color);
     margin: 0; 
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
 }
 
 header a {
-    color: #fce138;
+    color: var(--primary-color);
     text-decoration: none;
 }
 
@@ -61,8 +67,8 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 }
@@ -70,7 +76,7 @@ header nav ul li a:hover {
 /* FOOTER STYLES */
 
 footer {
-    background: #fce138;
+    background:var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display: flex;
@@ -79,7 +85,7 @@ footer {
 }
 
 footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -90,7 +96,7 @@ footer div {
 }
 
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 /* ALL SELECTION STYLES */
@@ -104,11 +110,12 @@ section {
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
 }
 
 .hero-cta {
@@ -123,15 +130,15 @@ section {
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color:var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
 }
 
 .hero-form {
-    border: 3px solid #024e76;
+    border: 3px solid var(--secondary-color);
     background-color: rgba(255, 225, 56, 0.8);
     padding: 20px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 40% ;
     margin: 3.5%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -148,11 +155,11 @@ section {
 }
 
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     border-radius: 10px;
@@ -169,8 +176,8 @@ section {
 }
 
 .hero-form button {
-    color: #fce138;
-    background-color: #024e76;
+    color:var(--primary-color);
+    background-color: var(--secondary-color);
     border: none;
     padding: 10px 20px;
     font-size: 16px;
@@ -178,7 +185,7 @@ section {
 }
 
 .hero-form button:hover {
-    background-color: #39a6b2; 
+    background-color: var(--tertiary-color); 
 }
 
 .checkbox-wrapper input, .radio-wrapper input {
@@ -197,7 +204,7 @@ section {
     height: 20px;
     width: 20px;
     background: rgba(255, 255, 255, 0.75);  
-    border: 1px solid #024e76;  
+    border: 1px solid var(--secondary-color);  
     position: absolute;
     top: -4px;
     left: -30px;
@@ -212,19 +219,19 @@ section {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: #024e76;
+    background: var(--secondary-color);
     position: absolute;
     left: -29px;
     top: -3px;
-    background-image: radial-gradient(circle, #39a6b2, #024e76);
+    background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
 }
   
 .checkbox-wrapper label::after {
     content: "";
     height: 6px;
     width: 14px;
-    border-left: 2px solid #024e76;
-    border-bottom: 2px solid #024e76;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
     position: absolute;
     left: -26px;
     top: 1px;
@@ -245,7 +252,7 @@ section {
 
 .section-title {
     font-size: 48px;
-    color: #024e76;
+    color: var(--secondary-color);
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -254,18 +261,18 @@ section {
 }
 
 .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
 }
 
 .secondary-border {
-    border-color: #39a6b2;
+    border-color:var(--tertiary-color);
 }
 
 /* WHAT WE DO SECTION STYLES */
 
 .intro p {
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--tertiary-color);
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
@@ -275,7 +282,7 @@ section {
 /* WHAT YOU DO SECTION STYLES */
 
 .steps {
-    background: #fce138
+    background: var(--primary-color)
 }
 
 .step {
@@ -286,17 +293,15 @@ section {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #39a6b2;
   }
 
-  .step:not(:last-child) {
+  .step:last-child {
       border-bottom: none;
   }
 
-.steps h3 {
-    color: #024e76;
+.step h3 {
+    color: var(--secondary-color);
     font-size: 46px;
-    margin-top: 10px;
     flex: 1 30%;
 }
 
@@ -321,14 +326,14 @@ section {
 }
 
 .step-text p {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-size: 18px;
 }
 
 .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 /* MEET THE TRAINERS */
@@ -343,8 +348,8 @@ section {
 
 .trainer {
     margin: 20px;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
     flex: 1;
 }
 
@@ -374,11 +379,11 @@ section {
 /* REACH OUT STYLES */
 
 .contact {
-    background: #024e76;
+    background: var(--secondary-color);
 }
 
 .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .contact-info {
@@ -401,7 +406,7 @@ section {
 }
 
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
 }
 
@@ -413,15 +418,15 @@ section {
 }
 
 .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .contact-form input, .contact-form textarea {
-    border:  1px solid #024e76;
+    border:  1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -437,8 +442,8 @@ section {
 .contact-form button {
     width: 100%;
     border: none;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
@@ -446,8 +451,8 @@ section {
 }
 
 .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
 }
 
 /* UTILITIES */
@@ -546,29 +551,29 @@ section {
 @media screen and (max-width: 575px) {
     .hero-form button {
         width: 100%;
-      }
+    }
     
-      .section-title {
+    .section-title {
         width: 95%;
-      }
+    }
     
-      .intro p {
+    .intro p {
         width: 100%;
-      }
+    }
     
-      .trainer {
+    .trainer {
         flex: 0 100%;
-      }
+    }
     
-      .contact-info {
+    .contact-info {
         text-align: center;
-      }
+    }
     
-      .contact-info > * {
+    .contact-info > * {
         flex: 0 100%;
-      }
+    }
       
-      .contact-form {
+    .contact-form {
           order: 3;
-      }
+    }
 }
